--- a/rezzy-webpanel/package.json
+++ b/rezzy-webpanel/package.json
@@ -27,6 +27,7 @@
     "leaflet-draw": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.5.6",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.6",
     "react-router-dom": "^6.26.2",
